# gold-cluster-energy-modelling

./: .gitignore  README.md  pyproject.toml
notebooks/: clustering-atoms.ipynb  clustering-shap.ipynb  clustering.ipynb  eda-atoms.ipynb  eda-tuning.ipynb  eda.ipynb  perturbation.ipynb  soap-features.ipynb  soap-skyline.ipynb  train.ipynb
scripts/: tune.py  tune.sh
