[project]
name = "gold-cluster-energy-modelling"
version = "0.1.0"
description = "Energy Modelling and Structural Analysis of Gold Clusters"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Atom
    "ase>=3.26.0",
    "dscribe>=2.1.1",
    # Math & Data
    "shap>=0.48.0",
    "numpy>=2.1.2",
    "scipy>=1.16.1",
    "pandas>=2.3.2",
    "astartes>=1.3.2",
    "paretoset>=1.2.5",
    "permetrics>=2.0.0",
    "umap-learn>=0.5.9.post2",
    # ML
    "mlflow>=3.3.2",
    "optuna>=4.5.0",
    "xgboost>=3.0.4",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.7.1",
    # Notebook and Visualization
    "seaborn>=0.13.2",
    "nbformat>=4.2.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    # Utilities
    "ruff>=0.12.12",
    "tqdm>=4.67.1",
    "llvmlite>=0.36",
]
